--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "telldus": "0.0.9",
     "ws": "0.4.32",
+    "lodash": "^2.4.1",
     "winston": "0.8.0"
   },
   "engines": {
